# better-poe

./: .gitignore  .prettierrc  README.md  generate_styles.js  package-lock.json  package.json  tailwind.config.js
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/examples/: auth.rs  parser.rs  watcher.rs
src-tauri/src/: auth.rs  auto_close.html  config.rs  error.rs  lib.rs  main.rs  misc.rs  parser.rs  types.rs
src-tauri/src/api/: auth.rs
src-tauri/src/storage/: mod.rs  settings.rs  state.rs  token.rs
src/lib/: GeneratedColors.svelte  GeneratedColors.ts  Greet.svelte  Navbar.svelte  Theme.ts  WIP.svelte  generatedColors.ts  settings.ts  state.ts  storage.ts  theme.ts
src/styles/: generatedColors.css
src/views/: Home.svelte  Settings.svelte  Stashes.svelte
src/views/settings/: API.svelte  Themes.svelte
