[package]
name = "better-poe"
version = "0.0.0"
description = "A Tauri App"
authors = ["Ricky12Awesome"]
license = "GPL-3"
repository = "https://github.com/Ricky12Awesome/better-poe"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
notify = { version = "6.1.1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12.0"
serde_json = "1.0"
anyhow = "1.0"
filesize = "0.2.0"
chrono = "0.4.30"
thiserror = "1.0.48"
rand = "0.8.5"
oauth2 = "4.4.2"
reqwest = "0.11.20"
const_format = "0.2.31"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
